# parts-bin

./: .coverage  .gitignore  CLAUDE.md  README.md  TODO.md  dev.py  log.py  main.py  package-lock.json  parts.db  pyproject.toml  server.py  test_server.py
db/: fine_tune.py  persistence.py  schema.sql  test_persistence.py
docs/design/: architecture.md  configuration.md  data-model.md  enrichment-model-migration.md  fallback-enrichment-pipeline.md  flexible-part-model-and-identity.md  flexible-part-model.md  ingestion-enrichment-integration.md  ingestion.md  llm-integration.md  migration.md  photo-pipeline.md  query-runtime-alignment.md  query.md  server-api.md  source-retrieval-and-extraction.md  ui-enrichment-review-and-settings.md  ui.md
docs/discovery/: parts-bin-fallback-enrichment.md  parts-bin.md
e2e/: conftest.py  test_ingestion.py  test_llm_extraction.py  test_query.py
ingestion/: completeness.py  ingest.py  jlcparts_download.py  jlcparts_lookup.py  lookup.py  pdf_extract.py  source_extract.py  test_completeness.py  test_ingest.py  test_jlcparts_download.py  test_jlcparts_lookup.py  test_lookup.py  test_pdf_extract.py  test_source_extract.py  web_search.py
llm/: client.py  test_client.py
photo/: pipeline.py  test_pipeline.py
query/: search.py  test_search.py
ui/: package-lock.json  vite.config.ts
ui/src/: App.module.css  App.tsx  Chat.module.css  Chat.tsx  FieldReviewEditor.module.css  FieldReviewEditor.tsx  Inventory.module.css  Inventory.tsx  PartCard.module.css  PartCard.tsx  Settings.module.css  Settings.tsx  csv.ts  index.css  types.ts  (+1 more)
(+47 files in other folders)
